Added My own demo and tested with normal OAuthSwift

--- a/OAuthSwiftDemo/Info.plist
+++ b/OAuthSwiftDemo/Info.plist
@@ -21,12 +21,13 @@
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
 			<key>CFBundleURLName</key>
 			<string></string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>oauth-swift</string>
-				<string>your.bundle.id</string>
+				<string>xtrapoint</string>
 			</array>
 		</dict>
 	</array>
@@ -34,9 +35,15 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>UIMainStoryboardFile</key>
+	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
+	</array>
+	<key>UISupportedInterfaceOrientations</key>
+	<array>
+		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 </dict>
 </plist>
